responsive - header , about section in about page

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 								בישראל, שכלל מתן שירות לעיריות ,
 								חברות ביטוח, בנקים, מכללות ורשות מקרקעי ישראל. הכרות מעמיקה עם לשכות הוצל"פ אשר מאפשרות
 								לה להעניק ידע מקצועי נרחב
-								ואפשרות רחבה של טיפול בגביית חובות. עורכת הדין משלמת יצירתיות משפטית ורגישות אנושית גבוה
+								ואפשרות רחבה של טיפול בגביית חובות. עורכת הדין משלבת יצירתיות משפטית ורגישות אנושית גבוה
 								.
 							</p>
 						</div>
