--- a/about.html
+++ b/about.html
@@ -56,32 +56,32 @@
 	<div id="sticky-header" class="lawyer_nav_manu align-items-center">
 		<div class="container">
 			<div class="row align-items-center">
-				<div class="col-lg-2">
-					<div class="logo">
-						<a class="logo_img" href="index.html" title="lawyer">
-							<img src="assets/images/LawyerMaayanLogo.svg" alt="Logo" />
-						</a>
-						<a class="logo_img main_sticky" href="index.html" title="lawyer">
-							<img src="assets/images/LawyerMaayanLogo.svg" alt="Logo" />
-						</a>
-					</div>
+				<div class=""">
+					<div class=" logo">
+					<a class="logo_img" href="index.html" title="lawyer">
+						<img src="assets/images/LawyerMaayanLogo.svg" alt="Logo" />
+					</a>
+					<a class="logo_img main_sticky" href="index.html" title="lawyer">
+						<img src="assets/images/LawyerMaayanLogo.svg" alt="Logo" />
+					</a>
 				</div>
-				<div class="col-lg-8">
-					<nav class="lawyer_menu">
-						<ul class="nav_scroll">
-							<li><a href="index.html">עמוד הבית</a>
-							</li>
-							<li><a href="about.html">אודות</a></li>
-							<li><a href="#">תחומי התמחות</a>
-								<ul class="sub-menu">
-									<li><a href="about.html">נדלן</a></li>
-									<li><a href="service.html">חוזים</a></li>
+			</div>
+			<div class="">
+				<nav class="lawyer_menu">
+					<ul class="nav_scroll">
+						<li><a href="index.html">עמוד הבית</a>
+						</li>
+						<li><a href="about.html">אודות</a></li>
+						<li><a href="#">תחומי התמחות</a>
+							<ul class="sub-menu">
+								<li><a href="about.html">נדלן</a></li>
+								<li><a href="service.html">חוזים</a></li>
 
-									<li><a href="faq.html">לשון הרע</a></li>
-									<li><a href="contact.html">נזיקין</a></li>
-								</ul>
-							</li>
-							<!-- <li><a href="#">Case Study</a>
+								<li><a href="faq.html">לשון הרע</a></li>
+								<li><a href="contact.html">נזיקין</a></li>
+							</ul>
+						</li>
+						<!-- <li><a href="#">Case Study</a>
 								<ul class="sub-menu">
 									<li><a href="case-study-1.html">Case Study One</a></li>
 									<li><a href="case-study-2.html">Case Study Two</a></li>
@@ -89,26 +89,26 @@
 									<li><a href="case-study-details.html">Case Study Details</a></li>
 								</ul>
 							</li> -->
-							<!-- <li><a href="blog.html">בלוג</a> -->
-							<!-- <ul class="sub-menu">
+						<!-- <li><a href="blog.html">בלוג</a> -->
+						<!-- <ul class="sub-menu">
 									<li><a href="blog.html">Blog List</a></li>
 									<li><a href="blog-2column.html">Blog 2Column</a></li>
 									<li><a href="blog-details.html">Blog Details</a></li>
 								</ul> -->
-							<!-- </li> -->
-							<li><a href="#">בלוג והרצאות</a>
-								<ul class="sub-menu">
-									<li><a href="blog.html">בלוג</a></li>
-									<li><a href="blog-2column.html">הרצאות</a></li>
-									<li><a href="blog-details.html">בלוג פרטים</a></li>
-								</ul>
-							</li>
-							<li><a href="contact.html">צור קשר</a></li>
-						</ul>
-					</nav>
-				</div>
+						<!-- </li> -->
+						<li><a href="#">בלוג והרצאות</a>
+							<ul class="sub-menu">
+								<li><a href="blog.html">בלוג</a></li>
+								<li><a href="blog-2column.html">הרצאות</a></li>
+								<li><a href="blog-details.html">בלוג פרטים</a></li>
+							</ul>
+						</li>
+						<li><a href="contact.html">צור קשר</a></li>
+					</ul>
+				</nav>
 			</div>
 		</div>
+	</div>
 	</div>
 
 	<!-- lawyer Mobile Menu Area -->
@@ -229,71 +229,6 @@
 	<!--==================================================-->
 
 	<!--==================================================-->
-	<!-- Start lawyer bussiness profile Section -->
-	<!--==================================================-->
-	<div class="about-section style-three">
-		<div class="container">
-			<div class="row about-bg align-items-center row-reverse">
-				<div class="col-lg-6 col-md-12">
-					<!-- about thumb -->
-					<div class="about-thumb2 business-profile">
-						<img src="assets/images/resource/about3.jpg" alt="">
-						<!-- about counter -->
-						<div class="about-counter">
-							<div class="about-counter-title">
-								<h3 class="counter">25</h3>
-								<h6>שנות ניסיון</h6>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-6 col-md-12 pl-35">
-					<div class="lawyer-section-title">
-						<h1>פרופיל עסקי </h1>
-						<p> מעין דקל נחשבת אורטוריטה בעולם הוצאה לפועל אחרי ניסיון בטיפול תיקים של חייבים וזוכים מעל ל20
-							שנים. שבהם צברה ניסיון
-							שבמהלכם ביצעה הסבות מורכבות של תיקי גבייה פעילים תוך מימושים מיוחדים. תוך טיפול בתיקים מול
-							הלקוח במקצועיות ושקיפות מלאה.
-							והכל בכפוף להוראות החוק , התקנות ועדכוני הפסיקה בהמשך לרגולציה המשפטית המשתנה מידי יום.
-						</p>
-						<p>
-							טיפול מלא בכל תחום ייצוג דיירים, ונדל"ן לאחר ניהול תיקים במשך עשור שלם, בהם חלשה על טיפול
-							בנכסי ירושה צווי ירושה
-							וצוואות, רכישה מכירה ושכירות של נכסי עסקים גדולים או נכסים פרטיים. תוך ניהול הליך בצמוד
-							ללקוחות.
-
-						</p>
-					</div>
-					<div class="row">
-						<div class="col-lg-6 col-md-6">
-							<div class="about-items">
-								<!-- about items content -->
-								<div class="about-items-content">
-									<h6><i class="bi bi-check2"></i> החזון שלנו</h6>
-									<p> להגן על זכויות הלקוחות ולספק שירות משפטי איכותי ואישי לכל פונה. </p>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-6 col-md-6 pr-0">
-							<div class="about-items">
-								<!-- about items content -->
-								<div class="about-items-content">
-									<h6><i class="bi bi-check2"></i> הערכים שלנו</h6>
-									<p> אמינות, מקצועיות, יושרה ושירות אישי - הם הערכים שמנחים אותנו בעבודתנו היומיומית.
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!--==================================================-->
-	<!-- End lawyer about Secton -->
-	<!--==================================================-->
-
-	<!--==================================================-->
 	<!-- Start lawyer Footer Section -->
 	<!--==================================================-->
 	<div class="footer-section">
@@ -313,7 +248,7 @@
 						<div class="company-desc-info">
 							<p> <i class="bi bi-telephone"></i> Phone: 050-7526885 </p>
 							<p> <i class="bi bi-envelope-fill"></i> Email: dekellaw2024@gmail.com </p>
-							<p> <i class="bi bi-geo-alt-fill"></i> מה הכתובת של המשרד? </p>
+							<p> <i class="bi bi-geo-alt-fill"></i> השחם 1 פתח תקווה</p>
 						</div>
 						<!-- company social info -->
 						<div class="company-social-info">
