responsive - bussiness profile in about page

--- a/about.html
+++ b/about.html
@@ -228,6 +228,69 @@
 	<!-- End lawyer about Secton -->
 	<!--==================================================-->
 
+	<div class="about-section style-two">
+		<div class="container">
+			<div class="d-flex row-reverse about-bg ">
+				<div class="col-lg-6 col-md-12">
+					<!-- about thumb -->
+					<div class="about-thumb">
+						<img src="assets/images/resource/about3.jpg" alt="">
+						<!-- about counter -->
+						<div class="about-counter">
+							<div class="about-counter-title">
+								<h3 class="counter">20</h3>
+								<h6>Year’s Exprience</h6>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-6 col-md-12">
+					<div class="about-extra-single-box">
+						<div class="lawyer-section-title white">
+							<h1>פרופיל עסקי </h1>
+							<p> מעין דקל נחשבת אורטוריטה בעולם הוצאה לפועל אחרי ניסיון בטיפול תיקים של חייבים וזוכים מעל
+								ל20
+								שנים. שבהם צברה ניסיון
+								שבמהלכם ביצעה הסבות מורכבות של תיקי גבייה פעילים תוך מימושים מיוחדים. תוך טיפול בתיקים
+								מול
+								הלקוח במקצועיות ושקיפות מלאה.
+								והכל בכפוף להוראות החוק , התקנות ועדכוני הפסיקה בהמשך לרגולציה המשפטית המשתנה מידי יום.
+							</p>
+							<p>
+								טיפול מלא בכל תחום ייצוג דיירים, ונדל"ן לאחר ניהול תיקים במשך עשור שלם, בהם חלשה על
+								טיפול
+								בנכסי ירושה צווי ירושה
+								וצוואות, רכישה מכירה ושכירות של נכסי עסקים גדולים או נכסים פרטיים. תוך ניהול הליך בצמוד
+								ללקוחות.
+
+							</p>
+						</div>
+						<div class="row">
+							<div class="col-lg-6 col-md-6">
+								<div class="about-check-list">
+									<p> <i class="bi bi-check2"></i> שלווה נפלאה. </p>
+									<p> <i class="bi bi-check2"></i> מעל 350 חברים פעילים </p>
+								</div>
+							</div>
+							<div class="col-lg-6 col-md-6 pr-0">
+								<div class="about-check-list">
+									<p> <i class="bi bi-check2"></i> פתרון קל ומהיר </p>
+									<p> <i class="bi bi-check2"></i> שירותים משפטיים מקצועיים </p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- lawyer button -->
+					<!-- <div class="lawyer-button">
+							<a href="about.html"> Discover More <i class="bi bi-arrow-right"></i> </a>
+						</div> -->
+				</div>
+			</div>
+		</div>
+	</div>
+	</div>
+
+
 	<!--==================================================-->
 	<!-- Start lawyer Footer Section -->
 	<!--==================================================-->
