about page responsive

--- a/about.html
+++ b/about.html
@@ -231,7 +231,7 @@
 	<div class="about-section style-two">
 		<div class="container">
 			<div class="d-flex row-reverse about-bg ">
-				<div class="col-lg-6 col-md-12">
+				<div class="col-lg-6 col-md-12 hide-below-1000">
 					<!-- about thumb -->
 					<div class="about-thumb">
 						<img src="assets/images/resource/about3.jpg" alt="">
