header - forall pages + mobile

--- a/real-estate.html
+++ b/real-estate.html
@@ -59,10 +59,10 @@
                 <div class="col-lg-2">
                     <div class="logo">
                         <a class="logo_img" href="index.html" title="lawyer">
-                            <img src="assets/images/LawyerMaayanLogo.svg" alt="Logo" />
+                            <img src="assets/images/LawyerMaayanLogo.svg" alt="" />
                         </a>
                         <a class="logo_img main_sticky" href="index.html" title="lawyer">
-                            <img src="assets/images/LawyerMaayanLogo.svg" alt="Logo" />
+                            <img src="assets/images/LawyerMaayanLogo.svg" alt="astute" />
                         </a>
                     </div>
                 </div>
@@ -74,20 +74,13 @@
                             <li><a href="about.html">אודות</a></li>
                             <li><a href="#">תחומי התמחות</a>
                                 <ul class="sub-menu">
-                                    <li><a href="about.html">נדלן</a></li>
-                                    <li><a href="service.html">חוזים</a></li>
-
-                                    <li><a href="faq.html">לשון הרע</a></li>
-                                    <li><a href="contact.html">נזיקין</a></li>
+                                    <li><a href="real-estate.html">נדלן</a></li>
+                                    <li><a href="contracts.html">חוזים</a></li>
+                                    <li><a href="defamation-law.html">לשון הרע</a></li>
+                                    <li><a href="tort_law.html">נזיקין</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">בלוג והרצאות</a>
-                                <ul class="sub-menu">
-                                    <li><a href="blog.html">בלוג</a></li>
-                                    <li><a href="blog-2column.html">הרצאות</a></li>
-                                    <li><a href="blog-details.html">בלוג פרטים</a></li>
-                                </ul>
-                            </li>
+                            <li><a href="blog.html">בלוג</a></li>
                             <li><a href="contact.html">צור קשר</a></li>
                         </ul>
                     </nav>
@@ -101,40 +94,21 @@
         <div class="mobile-menu">
             <nav class="lawyer_menu">
                 <ul class="nav_scroll">
-                    <li><a href="#">Home</a>
-                        <!-- <ul class="sub-menu">
-                            <li><a href="index.html">Home Page 01</a></li>
-                            <li><a href="index-2.html">Home Page 02</a></li>
-                            <li><a href="index-3.html">Home Page 03</a></li>
-                        </ul> -->
-                    </li>
-                    <li><a href="about.html">About </a></li>
-                    <li><a href="#">Pages</a>
+                    <li><a href="index.html"">עמוד הבית</a>					
+								</li>
+								<li><a href=" about.html">אודות</a></li>
+                    <li><a href="#">תחומי התמחות</a>
                         <ul class="sub-menu">
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="service.html">Service</a></li>
-                            <li><a href="team.html">Team</a></li>
-                            <li><a href="faq.html">Faq</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="real-estate.html">נדלן</a></li>
+                            <li><a href="contracts.html">חוזים</a></li>
+                            <li><a href="defamation-law.html">לשון הרע</a></li>
+                            <li><a href="tort_law.html">נזיקין</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Case Study</a>
-                        <ul class="sub-menu">
-                            <li><a href="case-study-1.html">Case Study One</a></li>
-                            <li><a href="case-study-2.html">Case Study Two</a></li>
-                            <li><a href="case-study-3.html">Case Study Three</a></li>
-                            <li><a href="case-study-details.html">Case Study Details</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">Blog</a>
-                        <ul class="sub-menu">
-                            <li><a href="blog.html">Blog List</a></li>
-                            <li><a href="blog-2column.html">Blog 2Column</a></li>
-                            <li><a href="blog-details.html">Blog Details</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="#">בלוג</a></li>
+                    <li><a href="contact.html">צור קשר</a></li>
                 </ul>
+
             </nav>
         </div>
     </div>
@@ -213,70 +187,7 @@
     <!-- End lawyer about Secton -->
     <!--==================================================-->
 
-    <!--==================================================-->
-    <!-- Start lawyer bussiness profile Section -->
-    <!--==================================================-->
-    <div class="about-section style-three">
-        <div class="container">
-            <div class="row about-bg align-items-center row-reverse">
-                <div class="col-lg-6 col-md-12">
-                    <!-- about thumb -->
-                    <div class="about-thumb2 business-profile">
-                        <img src="assets/images/resource/about3.jpg" alt="">
-                        <!-- about counter -->
-                        <div class="about-counter">
-                            <div class="about-counter-title">
-                                <h3 class="counter">25</h3>
-                                <h6>שנות ניסיון</h6>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-12 pl-35">
-                    <div class="lawyer-section-title">
-                        <h1>פרופיל עסקי </h1>
-                        <p> מעין דקל נחשבת אורטוריטה בעולם הוצאה לפועל אחרי ניסיון בטיפול תיקים של חייבים וזוכים מעל ל20
-                            שנים. שבהם צברה ניסיון
-                            שבמהלכם ביצעה הסבות מורכבות של תיקי גבייה פעילים תוך מימושים מיוחדים. תוך טיפול בתיקים מול
-                            הלקוח במקצועיות ושקיפות מלאה.
-                            והכל בכפוף להוראות החוק , התקנות ועדכוני הפסיקה בהמשך לרגולציה המשפטית המשתנה מידי יום.
-                        </p>
-                        <p>
-                            טיפול מלא בכל תחום ייצוג דיירים, ונדל"ן לאחר ניהול תיקים במשך עשור שלם, בהם חלשה על טיפול
-                            בנכסי ירושה צווי ירושה
-                            וצוואות, רכישה מכירה ושכירות של נכסי עסקים גדולים או נכסים פרטיים. תוך ניהול הליך בצמוד
-                            ללקוחות.
 
-                        </p>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6">
-                            <div class="about-items">
-                                <!-- about items content -->
-                                <div class="about-items-content">
-                                    <h6><i class="bi bi-check2"></i> החזון שלנו</h6>
-                                    <p> להגן על זכויות הלקוחות ולספק שירות משפטי איכותי ואישי לכל פונה. </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-md-6 pr-0">
-                            <div class="about-items">
-                                <!-- about items content -->
-                                <div class="about-items-content">
-                                    <h6><i class="bi bi-check2"></i> הערכים שלנו</h6>
-                                    <p> אמינות, מקצועיות, יושרה ושירות אישי - הם הערכים שמנחים אותנו בעבודתנו היומיומית.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--==================================================-->
-    <!-- End lawyer about Secton -->
-    <!--==================================================-->
     <!--==================================================-->
     <!-- Start lawyer Footer Section -->
     <!--==================================================-->
