--- a/about.html
+++ b/about.html
@@ -56,59 +56,37 @@
 	<div id="sticky-header" class="lawyer_nav_manu align-items-center">
 		<div class="container">
 			<div class="row align-items-center">
-				<div class=""">
-					<div class=" logo">
-					<a class="logo_img" href="index.html" title="lawyer">
-						<img src="assets/images/LawyerMaayanLogo.svg" alt="Logo" />
-					</a>
-					<a class="logo_img main_sticky" href="index.html" title="lawyer">
-						<img src="assets/images/LawyerMaayanLogo.svg" alt="Logo" />
-					</a>
+				<div class="col-lg-2">
+					<div class="logo">
+						<a class="logo_img" href="index.html" title="lawyer">
+							<img src="assets/images/LawyerMaayanLogo.svg" alt="" />
+						</a>
+						<a class="logo_img main_sticky" href="index.html" title="lawyer">
+							<img src="assets/images/LawyerMaayanLogo.svg" alt="astute" />
+						</a>
+					</div>
+				</div>
+				<div class="col-lg-8">
+					<nav class="lawyer_menu">
+						<ul class="nav_scroll">
+							<li><a href="index.html">עמוד הבית</a>
+							</li>
+							<li><a href="about.html">אודות</a></li>
+							<li><a href="#">תחומי התמחות</a>
+								<ul class="sub-menu">
+									<li><a href="real-estate.html">נדלן</a></li>
+									<li><a href="contracts.html">חוזים</a></li>
+									<li><a href="defamation-law.html">לשון הרע</a></li>
+									<li><a href="tort_law.html">נזיקין</a></li>
+								</ul>
+							</li>
+							<li><a href="blog.html">בלוג</a></li>
+							<li><a href="contact.html">צור קשר</a></li>
+						</ul>
+					</nav>
 				</div>
 			</div>
-			<div class="">
-				<nav class="lawyer_menu">
-					<ul class="nav_scroll">
-						<li><a href="index.html">עמוד הבית</a>
-						</li>
-						<li><a href="about.html">אודות</a></li>
-						<li><a href="#">תחומי התמחות</a>
-							<ul class="sub-menu">
-								<li><a href="about.html">נדלן</a></li>
-								<li><a href="service.html">חוזים</a></li>
-
-								<li><a href="faq.html">לשון הרע</a></li>
-								<li><a href="contact.html">נזיקין</a></li>
-							</ul>
-						</li>
-						<!-- <li><a href="#">Case Study</a>
-								<ul class="sub-menu">
-									<li><a href="case-study-1.html">Case Study One</a></li>
-									<li><a href="case-study-2.html">Case Study Two</a></li>
-									<li><a href="case-study-3.html">Case Study Three</a></li>
-									<li><a href="case-study-details.html">Case Study Details</a></li>
-								</ul>
-							</li> -->
-						<!-- <li><a href="blog.html">בלוג</a> -->
-						<!-- <ul class="sub-menu">
-									<li><a href="blog.html">Blog List</a></li>
-									<li><a href="blog-2column.html">Blog 2Column</a></li>
-									<li><a href="blog-details.html">Blog Details</a></li>
-								</ul> -->
-						<!-- </li> -->
-						<li><a href="#">בלוג והרצאות</a>
-							<ul class="sub-menu">
-								<li><a href="blog.html">בלוג</a></li>
-								<li><a href="blog-2column.html">הרצאות</a></li>
-								<li><a href="blog-details.html">בלוג פרטים</a></li>
-							</ul>
-						</li>
-						<li><a href="contact.html">צור קשר</a></li>
-					</ul>
-				</nav>
-			</div>
 		</div>
-	</div>
 	</div>
 
 	<!-- lawyer Mobile Menu Area -->
@@ -116,40 +94,21 @@
 		<div class="mobile-menu">
 			<nav class="lawyer_menu">
 				<ul class="nav_scroll">
-					<li><a href="#">Home</a>
+					<li><a href="index.html"">עמוד הבית</a>					
+								</li>
+								<li><a href=" about.html">אודות</a></li>
+					<li><a href="#">תחומי התמחות</a>
 						<ul class="sub-menu">
-							<li><a href="index.html">Home Page 01</a></li>
-							<li><a href="index-2.html">Home Page 02</a></li>
-							<li><a href="index-3.html">Home Page 03</a></li>
+							<li><a href="real-estate.html">נדלן</a></li>
+							<li><a href="contracts.html">חוזים</a></li>
+							<li><a href="defamation-law.html">לשון הרע</a></li>
+							<li><a href="tort_law.html">נזיקין</a></li>
 						</ul>
 					</li>
-					<li><a href="about.html">About </a></li>
-					<li><a href="#">Pages</a>
-						<ul class="sub-menu">
-							<li><a href="about.html">About</a></li>
-							<li><a href="service.html">Service</a></li>
-							<li><a href="team.html">Team</a></li>
-							<li><a href="faq.html">Faq</a></li>
-							<li><a href="contact.html">Contact</a></li>
-						</ul>
-					</li>
-					<li><a href="#">Case Study</a>
-						<ul class="sub-menu">
-							<li><a href="case-study-1.html">Case Study One</a></li>
-							<li><a href="case-study-2.html">Case Study Two</a></li>
-							<li><a href="case-study-3.html">Case Study Three</a></li>
-							<li><a href="case-study-details.html">Case Study Details</a></li>
-						</ul>
-					</li>
-					<li><a href="#">Blog</a>
-						<ul class="sub-menu">
-							<li><a href="blog.html">Blog List</a></li>
-							<li><a href="blog-2column.html">Blog 2Column</a></li>
-							<li><a href="blog-details.html">Blog Details</a></li>
-						</ul>
-					</li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="#">בלוג</a></li>
+					<li><a href="contact.html">צור קשר</a></li>
 				</ul>
+
 			</nav>
 		</div>
 	</div>
@@ -378,7 +337,7 @@
 				</div>
 			</div>
 			<div class="row footer-bottom-bg">
-				<div class="col-lg-6 col-md-6 pl-0">
+				<div class="col-lg-6 col-md-6 pl-0 footer-all-rights">
 					<div class="footer-bottom-content-copy">
 						<p>© כל הזכויות שמורות למעין דקל ושות׳ - משרד עורכי דין </p>
 					</div>
