--- a/defamation-law.html
+++ b/defamation-law.html
@@ -59,10 +59,10 @@
                 <div class="col-lg-2">
                     <div class="logo">
                         <a class="logo_img" href="index.html" title="lawyer">
-                            <img src="assets/images/LawyerMaayanLogo.svg" alt="Logo" />
+                            <img src="assets/images/LawyerMaayanLogo.svg" alt="" />
                         </a>
                         <a class="logo_img main_sticky" href="index.html" title="lawyer">
-                            <img src="assets/images/LawyerMaayanLogo.svg" alt="Logo" />
+                            <img src="assets/images/LawyerMaayanLogo.svg" alt="astute" />
                         </a>
                     </div>
                 </div>
@@ -74,35 +74,13 @@
                             <li><a href="about.html">אודות</a></li>
                             <li><a href="#">תחומי התמחות</a>
                                 <ul class="sub-menu">
-                                    <li><a href="about.html">נדלן</a></li>
-                                    <li><a href="service.html">חוזים</a></li>
-
-                                    <li><a href="faq.html">לשון הרע</a></li>
-                                    <li><a href="contact.html">נזיקין</a></li>
+                                    <li><a href="real-estate.html">נדלן</a></li>
+                                    <li><a href="contracts.html">חוזים</a></li>
+                                    <li><a href="defamation-law.html">לשון הרע</a></li>
+                                    <li><a href="tort_law.html">נזיקין</a></li>
                                 </ul>
                             </li>
-                            <!-- <li><a href="#">Case Study</a>
-								<ul class="sub-menu">
-									<li><a href="case-study-1.html">Case Study One</a></li>
-									<li><a href="case-study-2.html">Case Study Two</a></li>
-									<li><a href="case-study-3.html">Case Study Three</a></li>
-									<li><a href="case-study-details.html">Case Study Details</a></li>
-								</ul>
-							</li> -->
-                            <!-- <li><a href="blog.html">בלוג</a> -->
-                            <!-- <ul class="sub-menu">
-									<li><a href="blog.html">Blog List</a></li>
-									<li><a href="blog-2column.html">Blog 2Column</a></li>
-									<li><a href="blog-details.html">Blog Details</a></li>
-								</ul> -->
-                            <!-- </li> -->
-                            <li><a href="#">בלוג והרצאות</a>
-                                <ul class="sub-menu">
-                                    <li><a href="blog.html">בלוג</a></li>
-                                    <li><a href="blog-2column.html">הרצאות</a></li>
-                                    <li><a href="blog-details.html">בלוג פרטים</a></li>
-                                </ul>
-                            </li>
+                            <li><a href="blog.html">בלוג</a></li>
                             <li><a href="contact.html">צור קשר</a></li>
                         </ul>
                     </nav>
@@ -116,40 +94,21 @@
         <div class="mobile-menu">
             <nav class="lawyer_menu">
                 <ul class="nav_scroll">
-                    <li><a href="#">Home</a>
+                    <li><a href="index.html"">עמוד הבית</a>					
+								</li>
+								<li><a href=" about.html">אודות</a></li>
+                    <li><a href="#">תחומי התמחות</a>
                         <ul class="sub-menu">
-                            <li><a href="index.html">Home Page 01</a></li>
-                            <li><a href="index-2.html">Home Page 02</a></li>
-                            <li><a href="index-3.html">Home Page 03</a></li>
+                            <li><a href="real-estate.html">נדלן</a></li>
+                            <li><a href="contracts.html">חוזים</a></li>
+                            <li><a href="defamation-law.html">לשון הרע</a></li>
+                            <li><a href="tort_law.html">נזיקין</a></li>
                         </ul>
                     </li>
-                    <li><a href="about.html">לשון הרע </a></li>
-                    <li><a href="#">Pages</a>
-                        <ul class="sub-menu">
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="service.html">Service</a></li>
-                            <li><a href="team.html">Team</a></li>
-                            <li><a href="faq.html">Faq</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">Case Study</a>
-                        <ul class="sub-menu">
-                            <li><a href="case-study-1.html">Case Study One</a></li>
-                            <li><a href="case-study-2.html">Case Study Two</a></li>
-                            <li><a href="case-study-3.html">Case Study Three</a></li>
-                            <li><a href="case-study-details.html">Case Study Details</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">Blog</a>
-                        <ul class="sub-menu">
-                            <li><a href="blog.html">Blog List</a></li>
-                            <li><a href="blog-2column.html">Blog 2Column</a></li>
-                            <li><a href="blog-details.html">Blog Details</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="#">בלוג</a></li>
+                    <li><a href="contact.html">צור קשר</a></li>
                 </ul>
+
             </nav>
         </div>
     </div>
@@ -168,7 +127,7 @@
                     <div class="breatcam-content text-center">
                         <!-- breadcumb title -->
                         <div class="breatcam-title">
-                            <h1> אודות </h1>
+                            <h1> לשון הרע </h1>
                         </div>
                         <!-- breatcam menu -->
                         <!-- <div class="breatcam-menu">
