--- a/index.html
+++ b/index.html
@@ -81,20 +81,13 @@
 							<li><a href="about.html">אודות</a></li>
 							<li><a href="#">תחומי התמחות</a>
 								<ul class="sub-menu">
-									<li><a href="about.html">נדלן</a></li>
-									<li><a href="service.html">חוזים</a></li>
-									<li><a href="team.html">בלוג והרצאות</a></li>
-									<li><a href="faq.html">לשון הרע</a></li>
-									<li><a href="contact.html">נזיקין</a></li>
+									<li><a href="real-estate.html">נדלן</a></li>
+									<li><a href="contracts.html">חוזים</a></li>
+									<li><a href="defamation-law.html">לשון הרע</a></li>
+									<li><a href="tort_law.html">נזיקין</a></li>
 								</ul>
 							</li>
-							<li><a href="blog.html">בלוג</a>
-								<!-- <ul class="sub-menu">
-									<li><a href="blog.html">Blog List</a></li>
-									<li><a href="blog-2column.html">Blog 2Column</a></li>
-									<li><a href="blog-details.html">Blog Details</a></li>
-								</ul> -->
-							</li>
+							<li><a href="blog.html">בלוג</a></li>
 							<li><a href="contact.html">צור קשר</a></li>
 						</ul>
 					</nav>
@@ -109,34 +102,20 @@
 			<nav class="lawyer_menu">
 				<ul class="nav_scroll">
 					<li><a href="index.html"">עמוד הבית</a>					
-					</li>
-					<li><a href=" about.html">About </a></li>
+								</li>
+								<li><a href=" about.html">אודות</a></li>
 					<li><a href="#">תחומי התמחות</a>
 						<ul class="sub-menu">
-							<li><a href="about.html">About</a></li>
-							<li><a href="service.html">Service</a></li>
-							<li><a href="team.html">Team</a></li>
-							<li><a href="faq.html">Faq</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="real-estate.html">נדלן</a></li>
+							<li><a href="contracts.html">חוזים</a></li>
+							<li><a href="defamation-law.html">לשון הרע</a></li>
+							<li><a href="tort_law.html">נזיקין</a></li>
 						</ul>
 					</li>
-					<li><a href="#">Case Study</a>
-						<ul class="sub-menu">
-							<li><a href="case-study-1.html">Case Study One</a></li>
-							<li><a href="case-study-2.html">Case Study Two</a></li>
-							<li><a href="case-study-3.html">Case Study Three</a></li>
-							<li><a href="case-study-details.html">Case Study Details</a></li>
-						</ul>
-					</li>
-					<li><a href="#">Blog</a>
-						<ul class="sub-menu">
-							<li><a href="blog.html">Blog List</a></li>
-							<li><a href="blog-2column.html">Blog 2Column</a></li>
-							<li><a href="blog-details.html">Blog Details</a></li>
-						</ul>
-					</li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="#">בלוג</a></li>
+					<li><a href="contact.html">צור קשר</a></li>
 				</ul>
+
 			</nav>
 		</div>
 	</div>
@@ -170,9 +149,6 @@
 	<!--==================================================-->
 	<!--End lawyer hero section  -->
 	<!--==================================================-->
-
-
-
 
 
 	<!--==================================================-->
