--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -88,10 +88,10 @@
                 <div class="col-lg-2">
                     <div class="logo">
                         <a class="logo_img" href="index.html" title="lawyer">
-                            <img src="assets/images/LawyerMaayanLogo.svg" alt="Logo" />
+                            <img src="assets/images/LawyerMaayanLogo.svg" alt="" />
                         </a>
                         <a class="logo_img main_sticky" href="index.html" title="lawyer">
-                            <img src="assets/images/LawyerMaayanLogo.svg" alt="Logo" />
+                            <img src="assets/images/LawyerMaayanLogo.svg" alt="astute" />
                         </a>
                     </div>
                 </div>
@@ -103,19 +103,13 @@
                             <li><a href="about.html">אודות</a></li>
                             <li><a href="#">תחומי התמחות</a>
                                 <ul class="sub-menu">
-                                    <li><a href="about.html">נדלן</a></li>
-                                    <li><a href="service.html">חוזים</a></li>
-                                    <li><a href="faq.html">לשון הרע</a></li>
-                                    <li><a href="contact.html">נזיקין</a></li>
+                                    <li><a href="real-estate.html">נדלן</a></li>
+                                    <li><a href="contracts.html">חוזים</a></li>
+                                    <li><a href="defamation-law.html">לשון הרע</a></li>
+                                    <li><a href="tort_law.html">נזיקין</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">בלוג והרצאות</a>
-                                <ul class="sub-menu">
-                                    <li><a href="blog.html">בלוג</a></li>
-                                    <li><a href="blog-2column.html">הרצאות</a></li>
-                                    <li><a href="blog-details.html">בלוג פרטים</a></li>
-                                </ul>
-                            </li>
+                            <li><a href="blog.html">בלוג</a></li>
                             <li><a href="contact.html">צור קשר</a></li>
                         </ul>
                     </nav>
@@ -129,25 +123,21 @@
         <div class="mobile-menu">
             <nav class="lawyer_menu">
                 <ul class="nav_scroll">
-                    <li><a href="index.html">עמוד הבית</a></li>
-                    <li><a href="about.html">אודות</a></li>
+                    <li><a href="index.html"">עמוד הבית</a>					
+								</li>
+								<li><a href=" about.html">אודות</a></li>
                     <li><a href="#">תחומי התמחות</a>
                         <ul class="sub-menu">
-                            <li><a href="about.html">נדלן</a></li>
-                            <li><a href="service.html">חוזים</a></li>
-                            <li><a href="faq.html">לשון הרע</a></li>
-                            <li><a href="contact.html">נזיקין</a></li>
+                            <li><a href="real-estate.html">נדלן</a></li>
+                            <li><a href="contracts.html">חוזים</a></li>
+                            <li><a href="defamation-law.html">לשון הרע</a></li>
+                            <li><a href="tort_law.html">נזיקין</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">בלוג והרצאות</a>
-                        <ul class="sub-menu">
-                            <li><a href="blog.html">בלוג</a></li>
-                            <li><a href="blog-2column.html">הרצאות</a></li>
-                            <li><a href="blog-details.html">בלוג פרטים</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="#">בלוג</a></li>
                     <li><a href="contact.html">צור קשר</a></li>
                 </ul>
+
             </nav>
         </div>
     </div>
