--- a/real-estate.html
+++ b/real-estate.html
@@ -160,23 +160,37 @@
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="lawyer-section-title business-profile">
-                        <h1 class="about-border2">אודות עורכת דין</h1>
-                        <h1> מעין דקל</h1>
-                        <p class="about-pt"> מעין דקל עורכת דין מנוסה בעלת ניסיון עשיר של 20 שנים, בעבודה עם משרדי עורכי
-                            דין המובלים בישראל, שכלל מתן שירות לעיריות ,
-                            חברות ביטוח, בנקים, מכללות ורשות מקרקעי ישראל. הכרות מעמיקה עם לשכות הוצל"פ אשר מאפשרות לה
-                            להעניק ידע מקצועי נרחב
-                            ואפשרות רחבה של טיפול בגביית חובות. עורכת הדין משלמת יצירתיות משפטית ורגישות אנושית גבוה .
+                        <h1 class="about-border2">התחדשות עירונית – תמ"א 38 ונדל"ן</h1>
+                        <p class="about-pt"> לאור מצוקת הדיור בארץ, יש לעודד את התחדשות העירונית כדי להגדיל את היצע של
+                            הדיור. משרדנו מייצג דיירים בפרויקטים באזור גוש
+                            דן. יש חשיבות לייעול ושימוש נכון של הקרקע כדי לתת מענה ראוי לדיירים ולשפר את איכות החיים
+                            שלהם ושל הסביבה. יש חשיבות
+                            לבדיקה קפדנית של הפרטים בחוזה התמ"א ובדיקת השטח והגודל בדירות והשירות של השטח הציבורי
+                            בנכסים. תוך בדיקה מקיפה של הקבלן
+                            והחברה היזמית.
 
                         </p>
-                        <p> מעין דקל מאמינה שיטה של שקיפות מלאה ללקוחות ושאיפה למצוינות, ובדרכה המיוחדת מסייעת לכל
-                            הלקוחות להתמודד עם משברים קשים
-                            תוך שהיא משיגה עבורם תוצאות מיטביות גם שמדובר בטיפול בתיקים מורכבים.
+                        <p>
+                            משרדנו מלווה כל דייר ודייר באופן אישי, תוך דאגה לצרכיו המיוחדים. בבדיקה מקיפה של חוזה התמ"א
+                            ונספחיו על מנת לוודא שהיזם
+                            יעמוד בהתחייבויותיו כלפי הדיירים אל מול הרשות כגון העירייה, מע"מ, רשות מקרקעי ישראל, טאבו,
+                            וכו..
 
                         </p>
-                        <p>הניסיון הרב של עורכת הדין מעין דקל מסייע לה להצליח לפתח אסטרטגיות מיוחדות עבור כל מקרה ובכך
-                            מצליחה להביא לפתרון מעולה
-                            עבור הלקוחות .תוך טיפול צמוד והסבר מלא.
+                        <p>
+                            הסכמי מכר – רכישה וקניה, חשיבות אדירה לדגש על סעיפי החוזה, מהו המתן הכספי וכיצד התשלומים
+                            מועברים בצורה נכונה וטובה ביותר
+                            ללקוח. תוך בדירה מעמיקה על מצב הנכס כדי שלא יתגלו בעיות נסתרות כגון עיקולים , או נזקים
+                            נסתרים. בשלבים אלו יש לתת דגש על
+                            משרד שמבין בחוק ובפסיקה העדכנית כך שהלקוחות יקבלו מענה מלא והגנה שלמה.
+                        </p>
+                        <p>
+                            הסכמי שכירות לטווח ארוך או קצר- תוך רישום הערות בהתאם בטאבו, למסחרי או לפרטי. יש לבדוק
+                            אופציות להארכת מועד, מה קורה במצב
+                            של החזר תשלומים. משרדנו פועל בטיפול מלא של פינוי המושכר . תוך פעילות כנגד הערבים במחלקת
+                            ההוצאה לפועל במשרדנו.
+
+
                         </p>
                     </div>
                 </div>
