--- a/about.html
+++ b/about.html
@@ -4,9 +4,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>עורכת דין מעין דקל - הוצאה לפועל, נדלן וירושות</title>
-	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>אודות עורכת דין מעין דקל | מומחית בהוצאה לפועל עם ניסיון של 20 שנה</title>
+	<meta name="description" content="היכרות עם עורכת דין מעין דקל - עורכת דין מנוסה עם יותר מ-20 שנות ניסיון בתחומי הוצאה לפועל, נדל״ן, חוזים, לשון הרע ונזיקין.">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
+	<meta name="keywords" content="עורכת דין, מעין דקל, הוצאה לפועל, נדל״ן, חוזים, לשון הרע, נזיקין, ייעוץ משפטי, משרד עורכי דין">
+	<meta name="robots" content="index, follow">
+	<link rel="canonical" href="https://www.mayandekel-law.co.il/about.html" />
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" sizes="56x56" href="assets/images/fav-icon/icon.png">
 	<!-- bootstrap CSS -->
@@ -39,6 +42,69 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 	<!-- Added RTL-specific stylesheet -->
 	<link rel="stylesheet" href="assets/css/rtl.css" type="text/css" media="all" />
+	<!-- Custom styles -->
+	<link rel="stylesheet" href="assets/css/custom.css" type="text/css" media="all" />
+	<!-- Schema.org markup for Google -->
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org",
+		"@type": "LegalService",
+		"name": "משרד עורכת דין מעין דקל",
+		"image": "assets/images/LawyerMaayanLogo.svg",
+		"url": "https://www.mayandekel-law.co.il/about.html",
+		"telephone": "050-7526885",
+		"address": {
+			"@type": "PostalAddress",
+			"streetAddress": "השחם 1",
+			"addressLocality": "פתח תקווה",
+			"postalCode": "4951729",
+			"addressCountry": "IL"
+		},
+		"description": "משרד עורכת דין מעין דקל מתמחה בתחומי הוצאה לפועל, נדל״ן, חוזים, לשון הרע ונזיקין. ניסיון של למעלה מ-20 שנה במגוון תחומי המשפט.",
+		"areaServed": "ישראל",
+		"hasOfferCatalog": {
+			"@type": "OfferCatalog",
+			"name": "שירותים משפטיים",
+			"itemListElement": [
+				{
+					"@type": "Offer",
+					"itemOffered": {
+						"@type": "Service",
+						"name": "הוצאה לפועל"
+					}
+				},
+				{
+					"@type": "Offer",
+					"itemOffered": {
+						"@type": "Service",
+						"name": "נדל\"ן"
+					}
+				},
+				{
+					"@type": "Offer",
+					"itemOffered": {
+						"@type": "Service",
+						"name": "חוזים"
+					}
+				},
+				{
+					"@type": "Offer",
+					"itemOffered": {
+						"@type": "Service",
+						"name": "לשון הרע"
+					}
+				},
+				{
+					"@type": "Offer",
+					"itemOffered": {
+						"@type": "Service",
+						"name": "נזיקין"
+					}
+				}
+			]
+		}
+	}
+	</script>
 </head>
 
 <body>
