--- a/defamation-law.html
+++ b/defamation-law.html
@@ -160,24 +160,17 @@
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="lawyer-section-title business-profile">
-                        <h1 class="about-border2">אודות עורכת דין</h1>
-                        <h1> מעין דקל</h1>
-                        <p class="about-pt"> מעין דקל עורכת דין מנוסה בעלת ניסיון עשיר של 20 שנים, בעבודה עם משרדי עורכי
-                            דין המובלים בישראל, שכלל מתן שירות לעיריות ,
-                            חברות ביטוח, בנקים, מכללות ורשות מקרקעי ישראל. הכרות מעמיקה עם לשכות הוצל"פ אשר מאפשרות לה
-                            להעניק ידע מקצועי נרחב
-                            ואפשרות רחבה של טיפול בגביית חובות. עורכת הדין משלמת יצירתיות משפטית ורגישות אנושית גבוה .
+                        <h1 class="about-border2">לשון הרע</h1>
+                        <p class="about-pt">
+                            משרדנו פועל בכל הנודע בפרסום לשון הרע במדיה ובכל אמצעי תקשורת ואף בפומבי, מדובר במצבים שבהם
+                            יש פרסום של דברים שפוגעים
+                            בשם הטוב, במוניטין או בקניין כלכלי ורוחני לרבות תביעות של דברי דיבה . פרסום של לשון הרע יכול
+                            להיות בכמה דרכים בעל פה,
+                            בכתב , בקול, בעיתון , באתר ברשת. הדבר יכול לגרום לעסקים נזקי הפסד אדירים, ובפרטי לפגיעה של
+                            ממש.
 
                         </p>
-                        <p> מעין דקל מאמינה שיטה של שקיפות מלאה ללקוחות ושאיפה למצוינות, ובדרכה המיוחדת מסייעת לכל
-                            הלקוחות להתמודד עם משברים קשים
-                            תוך שהיא משיגה עבורם תוצאות מיטביות גם שמדובר בטיפול בתיקים מורכבים.
 
-                        </p>
-                        <p>הניסיון הרב של עורכת הדין מעין דקל מסייע לה להצליח לפתח אסטרטגיות מיוחדות עבור כל מקרה ובכך
-                            מצליחה להביא לפתרון מעולה
-                            עבור הלקוחות .תוך טיפול צמוד והסבר מלא.
-                        </p>
                     </div>
                 </div>
             </div>
@@ -187,70 +180,6 @@
     <!-- End lawyer about Secton -->
     <!--==================================================-->
 
-    <!--==================================================-->
-    <!-- Start lawyer bussiness profile Section -->
-    <!--==================================================-->
-    <div class="about-section style-three">
-        <div class="container">
-            <div class="row about-bg align-items-center row-reverse">
-                <div class="col-lg-6 col-md-12">
-                    <!-- about thumb -->
-                    <div class="about-thumb2 business-profile">
-                        <img src="assets/images/resource/about3.jpg" alt="">
-                        <!-- about counter -->
-                        <div class="about-counter">
-                            <div class="about-counter-title">
-                                <h3 class="counter">25</h3>
-                                <h6>שנות ניסיון</h6>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-12 pl-35">
-                    <div class="lawyer-section-title">
-                        <h1>פרופיל עסקי </h1>
-                        <p> מעין דקל נחשבת אורטוריטה בעולם הוצאה לפועל אחרי ניסיון בטיפול תיקים של חייבים וזוכים מעל ל20
-                            שנים. שבהם צברה ניסיון
-                            שבמהלכם ביצעה הסבות מורכבות של תיקי גבייה פעילים תוך מימושים מיוחדים. תוך טיפול בתיקים מול
-                            הלקוח במקצועיות ושקיפות מלאה.
-                            והכל בכפוף להוראות החוק , התקנות ועדכוני הפסיקה בהמשך לרגולציה המשפטית המשתנה מידי יום.
-                        </p>
-                        <p>
-                            טיפול מלא בכל תחום ייצוג דיירים, ונדל"ן לאחר ניהול תיקים במשך עשור שלם, בהם חלשה על טיפול
-                            בנכסי ירושה צווי ירושה
-                            וצוואות, רכישה מכירה ושכירות של נכסי עסקים גדולים או נכסים פרטיים. תוך ניהול הליך בצמוד
-                            ללקוחות.
-
-                        </p>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6">
-                            <div class="about-items">
-                                <!-- about items content -->
-                                <div class="about-items-content">
-                                    <h6><i class="bi bi-check2"></i> החזון שלנו</h6>
-                                    <p> להגן על זכויות הלקוחות ולספק שירות משפטי איכותי ואישי לכל פונה. </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-md-6 pr-0">
-                            <div class="about-items">
-                                <!-- about items content -->
-                                <div class="about-items-content">
-                                    <h6><i class="bi bi-check2"></i> הערכים שלנו</h6>
-                                    <p> אמינות, מקצועיות, יושרה ושירות אישי - הם הערכים שמנחים אותנו בעבודתנו היומיומית.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--==================================================-->
-    <!-- End lawyer about Secton -->
-    <!--==================================================-->
 
     <!--==================================================-->
     <!-- Start lawyer Footer Section -->
