--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>עורכת דין מעין דקל</title>
-	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>עורכת דין מעין דקל | מומחית בהוצאה לפועל, נדל"ן וירושות</title>
+	<meta name="description" content="משרד עורכת דין מעין דקל מתמחה בתחומי הוצאה לפועל, נדל״ן, חוזים, לשון הרע ונזיקין. יעוץ משפטי אישי ומקצועי עם ניסיון של מעל 20 שנה.">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
+	<meta name="keywords" content="עורכת דין, מעין דקל, הוצאה לפועל, נדל״ן, חוזים, לשון הרע, נזיקין, ייעוץ משפטי, עורכי דין בישראל">
+	<meta name="robots" content="index, follow">
+	<link rel="canonical" href="https://www.mayandekel-law.co.il/" />
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" sizes="56x56" href="assets/images/fav-icon/icon.png">
 	<!-- bootstrap CSS -->
@@ -41,11 +44,56 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 	<link rel="stylesheet" href="assets/css/rtl.css" type="text/css" media="all" />
 	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;700&display=swap" rel="stylesheet">
+	<!-- Custom styles -->
+	<link rel="stylesheet" href="assets/css/custom.css" type="text/css" media="all" />
 	<style>
 		body {
 			font-family: 'Assistant', sans-serif;
 		}
 	</style>
+	<!-- Schema.org markup for Google -->
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org",
+		"@type": "LegalService",
+		"name": "משרד עורכת דין מעין דקל",
+		"image": "assets/images/LawyerMaayanLogo.svg",
+		"url": "https://www.mayandekel-law.co.il",
+		"telephone": "050-7526885",
+		"address": {
+			"@type": "PostalAddress",
+			"streetAddress": "השחם 1",
+			"addressLocality": "פתח תקווה",
+			"postalCode": "4951729",
+			"addressCountry": "IL"
+		},
+		"geo": {
+			"@type": "GeoCoordinates",
+			"latitude": 32.079861,
+			"longitude": 34.886141
+		},
+		"openingHoursSpecification": {
+			"@type": "OpeningHoursSpecification",
+			"dayOfWeek": [
+				"Sunday",
+				"Monday",
+				"Tuesday",
+				"Wednesday",
+				"Thursday"
+			],
+			"opens": "09:00",
+			"closes": "19:00"
+		},
+		"sameAs": [
+			"https://www.facebook.com/mayandekellaw",
+			"https://www.linkedin.com/in/mayandekel"
+		],
+		"priceRange": "₪₪-₪₪₪",
+		"description": "משרד עורכת דין מעין דקל מתמחה בתחומי הוצאה לפועל, נדל״ן, חוזים, לשון הרע ונזיקין.",
+		"areaServed": "ישראל",
+		"serviceType": ["הוצאה לפועל", "נדל״ן", "חוזים", "לשון הרע", "נזיקין"]
+	}
+	</script>
 </head>
 
 <body>
@@ -514,7 +562,7 @@
 								<i class="bi bi-telephone"></i>
 							</div>
 							<div class="contact-text">
-								<p>+(002) 0121-2843-661</p>
+								<p>050-7526885</p>
 							</div>
 						</div>
 					</div>
