--- a/tort_law.html
+++ b/tort_law.html
@@ -160,23 +160,28 @@
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="lawyer-section-title business-profile">
-                        <h1 class="about-border2">אודות עורכת דין</h1>
-                        <h1> מעין דקל</h1>
-                        <p class="about-pt"> מעין דקל עורכת דין מנוסה בעלת ניסיון עשיר של 20 שנים, בעבודה עם משרדי עורכי
-                            דין המובלים בישראל, שכלל מתן שירות לעיריות ,
-                            חברות ביטוח, בנקים, מכללות ורשות מקרקעי ישראל. הכרות מעמיקה עם לשכות הוצל"פ אשר מאפשרות לה
-                            להעניק ידע מקצועי נרחב
-                            ואפשרות רחבה של טיפול בגביית חובות. עורכת הדין משלמת יצירתיות משפטית ורגישות אנושית גבוה .
+                        <h1 class="about-border2">נזקי רכוש
+                        </h1>
+
+                        <p class="about-pt">
+                            משרדנו מטפל בנזקי רכוש שיכולים להיגרם- לרכבים, לנכסים, לעסק, לדירה . מכל סיבה כתוצאה משריפה
+                            הצפות גניבה פריצה וכמובן
+                            בדגש על ליקויי בניה בשיתוף פעולה עם המחלקה של הנדל"ן במשרדנו.
+
 
                         </p>
-                        <p> מעין דקל מאמינה שיטה של שקיפות מלאה ללקוחות ושאיפה למצוינות, ובדרכה המיוחדת מסייעת לכל
-                            הלקוחות להתמודד עם משברים קשים
-                            תוך שהיא משיגה עבורם תוצאות מיטביות גם שמדובר בטיפול בתיקים מורכבים.
+                        <p>
+                            בנזיקין יש לבצע בדיקה מעמיקה מי הגורם המזיק, מי האשם והאם זה נעשה כדין. האם אנשי מקצוע היו
+                            שותפים למקרה ? מה בדיוק ניזוק
+                            בדירה לדוגמא- ריהוט בדירה. לכן חשוב לבדוק האם מדובר בחוסר מקצועיות של איש מקצוע או פעולה
+                            שכתוצאה ממנה נגרם הנזק.
 
                         </p>
-                        <p>הניסיון הרב של עורכת הדין מעין דקל מסייע לה להצליח לפתח אסטרטגיות מיוחדות עבור כל מקרה ובכך
-                            מצליחה להביא לפתרון מעולה
-                            עבור הלקוחות .תוך טיפול צמוד והסבר מלא.
+                        <p>
+                            גם במקרה והנזק נגרם לא בכוונה ואפילו במחדל, עדיין קיימת אחריות ויש לתקן את העוול והנזק
+                            שנגרם. משרדנו פועל באופן צמוד
+                            להמון אנשי מקצוע ובאמצעות חוות דעת מומחים מצליחים לנצח משפטים, ולהעניק ללקוחות שלנו פסקי דין
+                            ראויים.
                         </p>
                     </div>
                 </div>
