change font size for mobile pages

--- a/blog.html
+++ b/blog.html
@@ -5,9 +5,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>עורכת דין מעין דקל - בלוג משפטי | עורכי דין בתחום הוצאה לפועל, נדל״ן וירושות</title>
-	<meta name="description" content="בלוג משפטי של עו״ד מעין דקל המתמחה בתחומי הוצאה לפועל, נדל״ן, חוזים, לשון הרע ונזיקין. מאמרים מקצועיים וייעוץ משפטי.">
+	<meta name="description"
+		content="בלוג משפטי של עו״ד מעין דקל המתמחה בתחומי הוצאה לפועל, נדל״ן, חוזים, לשון הרע ונזיקין. מאמרים מקצועיים וייעוץ משפטי.">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
-	<meta name="keywords" content="עורכת דין, מעין דקל, הוצאה לפועל, נדל״ן, חוזים, לשון הרע, נזיקין, ייעוץ משפטי, עורכי דין בישראל">
+	<meta name="keywords"
+		content="עורכת דין, מעין דקל, הוצאה לפועל, נדל״ן, חוזים, לשון הרע, נזיקין, ייעוץ משפטי, עורכי דין בישראל">
 	<meta name="robots" content="index, follow">
 	<link rel="canonical" href="https://www.mayandekel-law.co.il/blog.html" />
 	<!-- Favicon -->
