--- a/about.html
+++ b/about.html
@@ -5,9 +5,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>אודות עורכת דין מעין דקל | מומחית בהוצאה לפועל עם ניסיון של 20 שנה</title>
-	<meta name="description" content="היכרות עם עורכת דין מעין דקל - עורכת דין מנוסה עם יותר מ-20 שנות ניסיון בתחומי הוצאה לפועל, נדל״ן, חוזים, לשון הרע ונזיקין.">
+	<meta name="description"
+		content="היכרות עם עורכת דין מעין דקל - עורכת דין מנוסה עם יותר מ-20 שנות ניסיון בתחומי הוצאה לפועל, נדל״ן, חוזים, לשון הרע ונזיקין.">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
-	<meta name="keywords" content="עורכת דין, מעין דקל, הוצאה לפועל, נדל״ן, חוזים, לשון הרע, נזיקין, ייעוץ משפטי, משרד עורכי דין">
+	<meta name="keywords"
+		content="עורכת דין, מעין דקל, הוצאה לפועל, נדל״ן, חוזים, לשון הרע, נזיקין, ייעוץ משפטי, משרד עורכי דין">
 	<meta name="robots" content="index, follow">
 	<link rel="canonical" href="https://www.mayandekel-law.co.il/about.html" />
 	<!-- Favicon -->
