--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>עורכת דין מעין דקל | מומחית בהוצאה לפועל, נדל"ן וירושות</title>
-	<meta name="description" content="משרד עורכת דין מעין דקל מתמחה בתחומי הוצאה לפועל, נדל״ן, חוזים, לשון הרע ונזיקין. יעוץ משפטי אישי ומקצועי עם ניסיון של מעל 20 שנה.">
+	<meta name="description"
+		content="משרד עורכת דין מעין דקל מתמחה בתחומי הוצאה לפועל, נדל״ן, חוזים, לשון הרע ונזיקין. יעוץ משפטי אישי ומקצועי עם ניסיון של מעל 20 שנה.">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
-	<meta name="keywords" content="עורכת דין, מעין דקל, הוצאה לפועל, נדל״ן, חוזים, לשון הרע, נזיקין, ייעוץ משפטי, עורכי דין בישראל">
+	<meta name="keywords"
+		content="עורכת דין, מעין דקל, הוצאה לפועל, נדל״ן, חוזים, לשון הרע, נזיקין, ייעוץ משפטי, עורכי דין בישראל">
 	<meta name="robots" content="index, follow">
 	<link rel="canonical" href="https://www.mayandekel-law.co.il/" />
 	<!-- Favicon -->
